tests/errors/first_stage/operation/expected_index/expected_index.as
; expected an index inside brackets
STR: .string "hi"
mov STR[], r1